--- a/headintro.css
+++ b/headintro.css
@@ -138,7 +138,7 @@ section{
     display: block;
 }
 #middletabs-para{
-    width: 100%;
+    /* max-width: 100%; */
     position: sticky;
 }
 .tab-section img{
